# GameOfLife

./: CMakeLists.txt  main.cpp  readme.txt
inc/: event.hpp  game.hpp  grid.hpp  parse.hpp  win.hpp
src/: event.cpp  game.cpp  grid.cpp  parse.cpp  win.cpp
